2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ContentControlTest.cs: Add two more tests checking how
	IsEnabledChanged is fired.

2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTests.cs: Add test to check if the
	Changed event for user registered DPs is sync or async.

2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/ControlTest.cs: Add test to show that IsEnabledChanged
	is emitted asynchronously. Remove MoonlightBug from a test which is
	passing.

2009-06-03  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/UIElementTest.cs: Commit two new tests for
	UIElement.TransformToVisual which were created when fixing a related
	issue which was timing out some tests.

2009-06-02  Sebastien Pouliot  <sebastien@ximian.com>

	* security/SocketPolicyTest.cs: Adapt to internal API changes
	* Makefile.am: Add new parsers source files to the build

2009-05-29  Sebastien Pouliot  <sebastien@ximian.com>

	* IsolatedStorageFileTest.cs: Remove MoonlightBug to GetFilesInSubdirs.

2009-05-28  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: ButtonAutomationPeerTest.cs file added.
	* System.Windows.Automation.Peers/ButtonAutomationPeerTest.cs: New file
	tests ButtonAutomationPeer.
	* System.Windows.Automation.Peers/ImageAutomationPeerTest.cs: 
	* System.Windows.Automation.Peers/TextBoxAutomationPeerTest.cs:
	* System.Windows.Automation.Peers/TextBlockAutomationPeerTest.cs: Null
	test removed.
	* System.Windows.Automation.Peers/ButtonBaseAutomationPeerTest.cs: 
	Subclassing from FrameworkElementAutomationPeerTest.
	* System.Windows.Automation.Peers/FrameworkElementAutomationPeerTest.cs: 
	Null test is not virtual anymore.

2009-05-28  Jeffrey Stedfast  <fejj@novell.com>

	* System.Windows.Controls/TextBoxTest.cs
	(SetIdenticalSelectedText): Removed MoonlightBug attribute as this
	bug has now been fixed.

2009-05-28  Sebastien Pouliot  <sebastien@ximian.com>
