@@ -1,3 +1,8 @@
+2009-06-05  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows.Controls.Primitives/PopupTest.cs:
+	  Popup.IsOpen raises the Opened/Closed events async.
+
 2009-06-04  Alan McGovern  <amcgovern@novell.com>
 
 	* System.Windows/ContentControlTest.cs: Add two more tests checking how
